Fix mobile horizontal scroll glitch

--- a/styles.css
+++ b/styles.css
@@ -170,4 +170,5 @@ code {
     margin: 0;
   }
   pre { white-space: pre-wrap; }
+  code { overflow-wrap: break-word; }
 }
